--- a/index.html
+++ b/index.html
@@ -496,12 +496,12 @@ Dia 30: E-mail de reativação"></textarea>
 <script>
 // Configuração do Firebase - SUBSTITUA PELAS SUAS CREDENCIAIS
 const firebaseConfig = {
-    apiKey: "SUA_API_KEY_AQUI",
-    authDomain: "SEU_PROJECT_ID.firebaseapp.com",
-    projectId: "SEU_PROJECT_ID",
-    storageBucket: "SEU_PROJECT_ID.appspot.com",
-    messagingSenderId: "SEU_SENDER_ID",
-    appId: "SEU_APP_ID"
+    apiKey: "AIzaSyAxkOOHB1m2vhleekARWnXyhnTjCt251LQ",
+    authDomain: "plataforma-de-treinament-9a00b.firebaseapp.com",
+    projectId: "plataforma-de-treinament-9a00b",
+    storageBucket: "plataforma-de-treinament-9a00b.firebasestorage.app",
+    messagingSenderId: "192125351398",
+    appId: "1:192125351398:web:c16cc461c4c853132a1227"
 };
 
 // Inicializar Firebase
